<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookActivity">






  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:background="@color/colorPrimary" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        android:layout_below="@+id/topView"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="166dp"
        android:layout_height="145dp"
        android:src="@drawable/logobook"
        android:contentDescription="@string/enter_how_much_cookies_you_want"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/referensi_buku_pelajaran"
        android:textColor="#FFFF"
        android:textSize="15sp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/enter_how_much_cookies_you_want"
        android:src="@drawable/ic_back"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
  </RelativeLayout>
  <com.google.android.gms.ads.AdView
      android:id="@+id/adView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      app:adSize="SMART_BANNER"
      app:adUnitId="ca-app-pub-5717407544611949/1830892115"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="ObsoleteLayoutParam" />

  <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/Linier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="VisualLintBounds">

      <androidx.cardview.widget.CardView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_margin="20dp"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginTop="10dp"
              android:src="@drawable/logobook" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/poppinsbold"
              android:text="@string/PBO"
              android:textSize="15sp"
              tools:ignore="HardcodedText" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_margin="20dp"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/book1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginTop="10dp"
              android:src="@drawable/logobook" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/poppinsbold"
              android:text="@string/basisdata"
              android:textSize="15sp" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_margin="20dp"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginTop="10dp"
              android:src="@drawable/logobook" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/poppinsbold"
              android:text="@string/mat"
              android:textSize="15sp" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_margin="20dp"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginTop="10dp"
              android:src="@drawable/logobook" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/poppinsbold"
              android:text="@string/Web"
              android:textSize="15sp" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>


    </LinearLayout>


  </HorizontalScrollView>


</LinearLayout>